--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "Utility to help Melee players analyze their replay files.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf genfiles",
+    "build-ts": "tsc -p tsconfig.json",
+    "build": "npm run clean && npm run build-ts",
+    "analyze": "npm run build && node genfiles/analysis/blah.js"
   },
   "author": "nkprasad12",
   "license": "ISC",
   "dependencies": {
-    "@slippi/slippi-js": "^6.1.0"
+    "@slippi/slippi-js": "^6.1.0",
+    "typescript": "^4.3.2"
   }
 }
