--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "@slippi/slippi-js": "^6.1.0",
     "typescript": "^4.3.2"
+  },
+  "devDependencies": {
+    "prettier": "2.3.1"
   }
 }
