--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "analyze": "npm run build-cli && node genfiles/cli/run.js",
     "update-site": "npm run build && npm run update-docs && npm run push-docs",
     "update-docs": "rm -rf docs && mv genfiles docs && mkdir genfiles",
-    "push-docs": "git add ./docs && git commit -a -m \"Update site\" && git push"
+    "push-docs": "git add ./docs && git commit -m \"Update site\" && git push"
   },
   "author": "nkprasad12",
   "license": "ISC",
